Two column UI and simplifed language updates

--- a/src/GLideNUI/icon.qrc
+++ b/src/GLideNUI/icon.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>Icon.ico</file>
+        <file>Icon.png</file>
+        <file>Warning.png</file>
     </qresource>
 </RCC>
